# hgitview

./: .gitignore  LICENSE  flake.nix  hgitview.cabal
src/: GitView.hs
