cabal-version:  2.2

name:         hgitview
version:      0.1
stability:    experimental
synopsis:     Explore a GIT repository.
description:
  Blargh.

license:      BSD-3-Clause
license-file: LICENSE
author:       Douglas Burke
maintainer:   dburke.gw@gmail.com

build-type:     Simple

source-repository head
  type:     git
  location: https://github.com/DougBurke/hgitview/

executable hgitview
  default-language: Haskell2010
  hs-source-dirs:  src
  main-is:         GitView.hs

  -- other-modules:   PackageInfo_hgitview
  -- autogen-modules: PackageInfo_hgitview

  other-modules:   Paths_hgitview
  autogen-modules: Paths_hgitview

  ghc-options:
     -Wall -threaded

  build-depends:
    base
    , brick >= 2.0 && < 2.2
    , bytestring
    , containers
    , gitlib == 3.1.*
    , gitlib-libgit2
    , tagged
    , text
    , time
    , vector
    , vty >= 6.0 && < 6.1
    
